@@ -1,4 +1,6 @@
 Version 1.0.18:
+- Make writing of UIDLS files more robust. Avoid invalid file contents when
+  mpop is killed while writing the file.
 - Use proper binary prefixes when handling sizes.
 - Update gnulib to 2009-08-02.
 - Add support for delivery to MS Exchange pickup directories, based on a patch
